<resources>
    <string name="app_name">iMusic</string>
    <string name="music_acoustic">Nhạc Acoustic</string>
    <string name="music_korean">Nhạc Hàn Quốc</string>
    <string name="music_us">Nhạc Âu Mỹ</string>
    <string name="music_edm">Nhạc EDM</string>
    <string name="music_all">All Music</string>
    <string name="music_young">Nhạc trẻ</string>
    <string name="tab_home">HOME</string>
    <string name="my_song">Bài hát</string>
    <string name="my_music">Nhạc của tôi</string>
    <string name="my_music_playlist">Playlist</string>
    <string name="my_music_history">Lịch sử tải về</string>
    <string name="tab_search">Search</string>
    <string name="name_song">Name Song</string>
    <string name="name_sing">Name Sing</string>
</resources>
