<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    >
    <TextView
        android:id="@+id/text_all_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_80"
        android:drawableTop="@drawable/ic_music"
        android:text="@string/music_all"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/text_young_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_80"
        android:drawableTop="@drawable/ic_piano"
        android:text="@string/music_young"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/text_edm_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_80"
        android:drawableTop="@drawable/ic_headphones"
        android:text="@string/music_edm"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_all_music"
        />
    <TextView
        android:id="@+id/text_us_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_80"
        android:drawableTop="@drawable/ic_saxophone"
        android:text="@string/music_us"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_young_music"
        />
    <TextView
        android:id="@+id/text_acoustic_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_80"
        android:drawableTop="@drawable/ic_acoustic"
        android:text="@string/music_acoustic"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edm_music"
        />
    <TextView
        android:id="@+id/text_korean_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_80"
        android:drawableTop="@drawable/ic_drummer"
        android:text="@string/music_korean"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_us_music"
        />
</android.support.constraint.ConstraintLayout>
