<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    >
    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_84"
        android:background="@color/color_background"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/tab_home"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_50"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/text_all_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_60"
        android:drawableTop="@drawable/ic_music"
        android:text="@string/music_all"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home"
        />
    <TextView
        android:id="@+id/text_young_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_60"
        android:drawableTop="@drawable/ic_piano"
        android:text="@string/music_young"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home"
        />
    <TextView
        android:id="@+id/text_edm_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_80"
        android:layout_marginStart="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_50"
        android:drawableTop="@drawable/ic_headphones"
        android:text="@string/music_edm"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_all_music"
        />
    <TextView
        android:id="@+id/text_acoustic_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_60"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_70"
        android:drawableTop="@drawable/ic_acoustic"
        android:text="@string/music_acoustic"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edm_music"
        />
    <TextView
        android:id="@+id/text_us_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_54"
        android:layout_marginStart="@dimen/dp_54"
        android:layout_marginTop="@dimen/dp_50"
        android:drawableTop="@drawable/ic_saxaphone"
        android:text="@string/music_us"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_young_music"
        />
    <TextView
        android:id="@+id/text_korean_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_70"
        android:drawableTop="@drawable/ic_drummer"
        android:text="@string/music_korean"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_us_music"
        />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_84"
        android:background="@color/color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        >
        <Button
            android:id="@+id/button_home"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_marginEnd="@dimen/dp_80"
            android:layout_marginStart="@dimen/dp_80"
            android:background="@drawable/ic_home"
            android:backgroundTint="@color/color_gold"
            app:layout_constraintStart_toStartOf="parent"
            />
        <Button
            android:id="@+id/button_person"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:background="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <Button
            android:id="@+id/button_search"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_marginEnd="@dimen/dp_80"
            android:layout_marginStart="@dimen/dp_80"
            android:background="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
