<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_office"
    >
    <ImageView
        android:id="@+id/image_music_player"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_200"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:background="@drawable/ic_music_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/text_music_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_200"
        android:text="@string/my_song"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_40"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/button_next_music_player"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_200"
        android:background="@drawable/ic_nextlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/image_playlist"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/ic_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_music_player"
        />
    <TextView
        android:id="@+id/text_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/my_music_playlist"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_40"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_music_player"
        />
    <Button
        android:id="@+id/button_next_list_playlist"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/ic_nextlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_next_music_player"
        />
    <ImageView
        android:id="@+id/image_history_download"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/ic_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_playlist"
        />
    <TextView
        android:id="@+id/text_history_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/my_music_history"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_40"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_playlist"
        />
    <Button
        android:id="@+id/button_next_history_download"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/ic_nextlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_next_list_playlist"
        />
</android.support.constraint.ConstraintLayout>
